src/objects/APTS_Pricing_Staging__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Batch_Job_Id__c</fullName>
        <description>ID for the Apttus batch job associated to the Product Staging record</description>
        <label>APTS Batch Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Brands__c</fullName>
        <description>Brand associated to the Product Staging record</description>
        <label>Brands</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9999</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>AMBI</fullName>
                </value>
                <value>
                    <fullName>AMBIP</fullName>
                </value>
                <value>
                    <fullName>ARABA</fullName>
                </value>
                <value>
                    <fullName>ARANY</fullName>
                </value>
                <value>
                    <fullName>ASTRA</fullName>
                </value>
                <value>
                    <fullName>B&amp;W</fullName>
                </value>
                <value>
                    <fullName>BABYD</fullName>
                </value>
                <value>
                    <fullName>BADED</fullName>
                </value>
                <value>
                    <fullName>BALLY</fullName>
                </value>
                <value>
                    <fullName>BAMA</fullName>
                </value>
                <value>
                    <fullName>BARB</fullName>
                </value>
                <value>
                    <fullName>BARTE</fullName>
                </value>
                <value>
                    <fullName>BCOTH</fullName>
                </value>
                <value>
                    <fullName>BELL</fullName>
                </value>
                <value>
                    <fullName>BETSY</fullName>
                </value>
                <value>
                    <fullName>BEZKN</fullName>
                </value>
                <value>
                    <fullName>BIOTE</fullName>
                </value>
                <value>
                    <fullName>BITS</fullName>
                </value>
                <value>
                    <fullName>BLAMO</fullName>
                </value>
                <value>
                    <fullName>BLOOM</fullName>
                </value>
                <value>
                    <fullName>BNUTS</fullName>
                </value>
                <value>
                    <fullName>BRAVO</fullName>
                </value>
                <value>
                    <fullName>BRILL</fullName>
                </value>
                <value>
                    <fullName>BRYLC</fullName>
                </value>
                <value>
                    <fullName>BUHLE</fullName>
                </value>
                <value>
                    <fullName>BURTS</fullName>
                </value>
                <value>
                    <fullName>CAFIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Calculation_Type__c</fullName>
        <description>Calculation type associated to the Product Staging record</description>
        <label>Calculation Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Condition_Type__c</fullName>
        <description>Condition Type associated to the Product Staging record.</description>
        <label>Condition Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Type__c</fullName>
        <description>Configuration Type of the Product Staging record</description>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Contract_Period__c</fullName>
        <description>Contract Period of the Product Staging record.</description>
        <label>Contract Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Price_Unit__c</fullName>
        <description>Cost Price Unit associated to the Product Staging record.</description>
        <label>Cost Price Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cross_plant_material_status__c</fullName>
        <description>Cross-plant material status of the Product Staging record.</description>
        <label>Cross-plant material status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Delivery_Plant__c</fullName>
        <description>Default delivery plant for the Product Staging record.</description>
        <label>Default Delivery Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>Description of the Product Staging record.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_chain_specific_materia__c</fullName>
        <label>Distribution-chain-specific material sta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_01</fullName>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>SAP_02</fullName>
                    <label>Blocked for selling</label>
                </value>
                <value>
                    <fullName>SAP_03</fullName>
                    <label>Warning when selling</label>
                </value>
                <value>
                    <fullName>SAP_04</fullName>
                    <label>New product</label>
                </value>
                <value>
                    <fullName>SAP_05</fullName>
                    <label>OOS prolonged</label>
                </value>
                <value>
                    <fullName>SAP_06</fullName>
                    <label>Only some customers</label>
                </value>
                <value>
                    <fullName>SAP_07</fullName>
                    <label>To sell old stocks</label>
                </value>
                <value>
                    <fullName>SAP_08</fullName>
                    <label>Product for deletion</label>
                </value>
                <value>
                    <fullName>SAP_09</fullName>
                    <label>Generic</label>
                </value>
                <value>
                    <fullName>SAP_10</fullName>
                    <label>Obsolete to consult</label>
                </value>
                <value>
                    <fullName>SAP_11</fullName>
                    <label>Only for catalog</label>
                </value>
                <value>
                    <fullName>SAP_12</fullName>
                    <label>End of service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Distribution_channel__c</fullName>
        <description>Distribution channel of the Product Staging record.</description>
        <label>Distribution channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <description>Division of the Product Staging record.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Effective_Date__c</fullName>
        <description>Effective date of the Product Staging record.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Effective_Start_Date__c</fullName>
        <description>Effective start date of the Product Staging record.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expiration_Date__c</fullName>
        <description>Expiration date of the Product Staging record.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Format__c</fullName>
        <description>Format of the Product Staging record.</description>
        <label>Format</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_General_item_category_group__c</fullName>
        <description>General item category group for the Product Staging record.</description>
        <label>General item category group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_International_article_number_EAN_UP__c</fullName>
        <description>EAN/UPC code for this Product Staging record.</description>
        <label>International article number (EAN/UPC)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Product Staging record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_category_group_from_material_m__c</fullName>
        <label>Item category group from material master</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LEAS</fullName>
                </value>
                <value>
                    <fullName>LO01</fullName>
                </value>
                <value>
                    <fullName>LO02</fullName>
                </value>
                <value>
                    <fullName>LO03</fullName>
                </value>
                <value>
                    <fullName>LO04</fullName>
                </value>
                <value>
                    <fullName>LO06</fullName>
                </value>
                <value>
                    <fullName>LO08</fullName>
                </value>
                <value>
                    <fullName>LO09</fullName>
                </value>
                <value>
                    <fullName>LO11</fullName>
                </value>
                <value>
                    <fullName>LO12</fullName>
                </value>
                <value>
                    <fullName>LO13</fullName>
                </value>
                <value>
                    <fullName>LO14</fullName>
                </value>
                <value>
                    <fullName>LO16</fullName>
                </value>
                <value>
                    <fullName>LO18</fullName>
                </value>
                <value>
                    <fullName>LO19</fullName>
                </value>
                <value>
                    <fullName>Z3RD</fullName>
                </value>
                <value>
                    <fullName>ZADD</fullName>
                </value>
                <value>
                    <fullName>ZBON</fullName>
                </value>
                <value>
                    <fullName>ZCAS</fullName>
                </value>
                <value>
                    <fullName>ZCON</fullName>
                </value>
                <value>
                    <fullName>ZCOS</fullName>
                </value>
                <value>
                    <fullName>ZCSC</fullName>
                </value>
                <value>
                    <fullName>ZCSF</fullName>
                </value>
                <value>
                    <fullName>ZCSO</fullName>
                </value>
                <value>
                    <fullName>ZCSR</fullName>
                </value>
                <value>
                    <fullName>ZDEB</fullName>
                </value>
                <value>
                    <fullName>ZDEP</fullName>
                </value>
                <value>
                    <fullName>ZDIH</fullName>
                </value>
                <value>
                    <fullName>ZDIN</fullName>
                </value>
                <value>
                    <fullName>ZDIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_List_Price__c</fullName>
        <description>List price of the Product Staging record.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Product_Hierarchy_Code__c</fullName>
        <description>Local product hierarchy code of the Product Staging record.</description>
        <label>Local Product Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Material_Type__c</fullName>
        <description>Material type for the Product Staging record.</description>
        <label>Material Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Material_group__c</fullName>
        <description>Material group for the Product Staging record.</description>
        <label>Material group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C01010101</fullName>
                </value>
                <value>
                    <fullName>C01010301</fullName>
                </value>
                <value>
                    <fullName>C01010401</fullName>
                </value>
                <value>
                    <fullName>C01010501</fullName>
                </value>
                <value>
                    <fullName>C01010601</fullName>
                </value>
                <value>
                    <fullName>C01020101</fullName>
                </value>
                <value>
                    <fullName>C01030000</fullName>
                </value>
                <value>
                    <fullName>C01040201</fullName>
                </value>
                <value>
                    <fullName>C01040401</fullName>
                </value>
                <value>
                    <fullName>C01040499</fullName>
                </value>
                <value>
                    <fullName>C01050201</fullName>
                </value>
                <value>
                    <fullName>C01060101</fullName>
                </value>
                <value>
                    <fullName>C01070101</fullName>
                </value>
                <value>
                    <fullName>C01070201</fullName>
                </value>
                <value>
                    <fullName>C01080000</fullName>
                </value>
                <value>
                    <fullName>C01090101</fullName>
                </value>
                <value>
                    <fullName>C01090102</fullName>
                </value>
                <value>
                    <fullName>C01090301</fullName>
                </value>
                <value>
                    <fullName>C01090401</fullName>
                </value>
                <value>
                    <fullName>C01090701</fullName>
                </value>
                <value>
                    <fullName>C01120000</fullName>
                </value>
                <value>
                    <fullName>C01140000</fullName>
                </value>
                <value>
                    <fullName>C01170000</fullName>
                </value>
                <value>
                    <fullName>C01180000</fullName>
                </value>
                <value>
                    <fullName>C01210000</fullName>
                </value>
                <value>
                    <fullName>C01230100</fullName>
                </value>
                <value>
                    <fullName>C02010100</fullName>
                </value>
                <value>
                    <fullName>C02010101</fullName>
                </value>
                <value>
                    <fullName>C02010200</fullName>
                </value>
                <value>
                    <fullName>C02010201</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Material_pricing_group__c</fullName>
        <description>Material pricing group for the Product Staging record.</description>
        <label>Material pricing group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Name__c</fullName>
        <description>Product Name for the Product Staging record.</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PLI_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>PLI Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Packaging_type__c</fullName>
        <description>Packaging type for the Product Staging record.</description>
        <label>Packaging type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PlantId__c</fullName>
        <description>Plant for the Product Staging record.</description>
        <label>Plant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Plant_Status__c</fullName>
        <description>Plant status for the Product Staging record.</description>
        <label>Plant Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Blocked for purchasing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Historic</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Productive</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Ready for planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Price_Uom__c</fullName>
        <description>Price unit of measure for the Product Staging record.</description>
        <label>Price Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_CS</fullName>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LR</fullName>
                    <label>Layer</label>
                </value>
                <value>
                    <fullName>SAP_ZRE</fullName>
                    <label>Reporting</label>
                </value>
                <value>
                    <fullName>SAP_ZTU</fullName>
                    <label>Trade unit</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_ZVW</fullName>
                    <label>Vol.weight</label>
                </value>
                <value>
                    <fullName>SAP_ZZZ</fullName>
                    <label>St. UoM IB</label>
                </value>
                <value>
                    <fullName>SAP_PX1</fullName>
                    <label>HAP120*80</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PX2</fullName>
                    <label>FUP120*80</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_SMU</fullName>
                    <label>Smallest Unit</label>
                </value>
                <value>
                    <fullName>SAP_MTR</fullName>
                    <label>Meter</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Table__c</fullName>
        <description>Pricing table for the Product Staging record.</description>
        <label>Pricing Table</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Process_Status__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unmatched</fullName>
                    <default>true</default>
                    <label>Unmatched</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Processed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <description>Product Code for the Product Staging record.</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family2__c</fullName>
        <description>Subcategory for the Product Staging record.</description>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Bareca</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Cafitesse</fullName>
                </value>
                <value>
                    <fullName>Chocolate Milk</fullName>
                </value>
                <value>
                    <fullName>Cleaners</fullName>
                </value>
                <value>
                    <fullName>Coffee Cups</fullName>
                </value>
                <value>
                    <fullName>Coffee Grinders</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Kitchen</fullName>
                </value>
                <value>
                    <fullName>Coffee Pads</fullName>
                </value>
                <value>
                    <fullName>Coffee Syrup</fullName>
                </value>
                <value>
                    <fullName>Convenience and Retail</fullName>
                </value>
                <value>
                    <fullName>Cookies</fullName>
                </value>
                <value>
                    <fullName>Cups</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Espresso Beans</fullName>
                </value>
                <value>
                    <fullName>Espresso Machines</fullName>
                </value>
                <value>
                    <fullName>Filter Coffee</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew and Filter</fullName>
                </value>
                <value>
                    <fullName>Glasses &amp; Porcelain</fullName>
                </value>
                <value>
                    <fullName>HC Care</fullName>
                </value>
                <value>
                    <fullName>HC Cure</fullName>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                </value>
                <value>
                    <fullName>Ice Coffee</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Machine Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <description>Category associated to the Product Staging record</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&amp; More</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Packages</fullName>
                </value>
                <value>
                    <fullName>Perfect fit</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Spare Parts</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Profit_Center__c</fullName>
        <description>Profit center for the Product Staging record.</description>
        <label>Profit Center</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deletion_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Deletion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_ListPriceUnits__c</fullName>
        <label>SAP List Price Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Group__c</fullName>
        <description>Sales group for the Product Staging record.</description>
        <label>Sales Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <description>Sales office for the Product Staging record</description>
        <label>Sales Office</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <description>Sales organization for the Product Staging record</description>
        <label>Sales Organization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>